--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -60,7 +60,8 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #1A244F;
+
 }
 
 [tabindex="-1"]:focus {
