--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -6225,6 +6225,7 @@ a.close.disabled {
 .carousel-inner {
   position: relative;
   width: 100%;
+  height: 900px;
   overflow: hidden;
 }
 
@@ -6239,6 +6240,7 @@ a.close.disabled {
   display: none;
   float: left;
   width: 100%;
+  height: 900;
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
